try to prevent sidescrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .header {
